--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "docusaurus start",
     "build": "docusaurus build",
-    "deploy": "docusaurus deploy",
+    "deploy": "GIT_USER=the-human-channel docusaurus deploy",
     "predeploy": "docusaurus build"
   },
   "dependencies": {
@@ -13,3 +13,4 @@
     "@docusaurus/preset-classic": "^3.8.0"
   }
 }
+
