--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,6 +1,5 @@
 rickjewett:
   name: Rick Jewett
   title: Founder & Visionary, The Human Channel
-  url: https://the-human-channel.github.io
-  image_url: /the-human-channel-site/img/logo.svg
+  image_url: /img/logo.png
 
