--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,4 @@
 rickjewett:
   name: Rick Jewett
   title: Founder & Visionary, The Human Channel
-  image_url: img/logo.svg
-
+  image_url: img/logo.png
