--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,4 +1,4 @@
 rickjewett:
   name: Rick Jewett
   title: Founder & Visionary, The Human Channel
-  image_url: img/logo.png
+  image_url: https://the-human-channel.github.io/the-human-channel-site/img/logo.svg
